--- a/src/index.css
+++ b/src/index.css
@@ -29,6 +29,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --trans-03: all 0.4s ease;
+    --trans-05: all 0.5s ease;
     
   }
   .dark {
@@ -130,7 +131,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 6px;
-  transition: var(--trans-03);
+  transition: var(--trans-05);
 }
 
 .menu li:hover{
@@ -156,7 +157,7 @@
   align-items: center;
   width: 100%;
   height: 100%;
-  transition: var(--trans-03);
+  transition: var(--trans-05);
 }
 .menu li a:hover,
 .bottom-menu li a:hover{
