--- a/src/index.css
+++ b/src/index.css
@@ -168,6 +168,7 @@
   display: flex; 
   align-items: center;
 }
+
 .menu li .icon,
 .bottom-menu li .icon{
   display: flex;
@@ -175,8 +176,11 @@
   justify-content: center;
   min-width: 60px;
   font-size: 1.25rem;
+  transition: var(--trans-03)
 }
-
+.menu li:hover .icon{
+  scale : 1.3;
+}
 
 /* CONTENT */
 .content{
