--- a/src/index.css
+++ b/src/index.css
@@ -78,7 +78,7 @@
   z-index: 1;
   padding: 1rem;
   left: 0;
-  transition: var(--trans-03);
+  transition: left 0.4s ease;
 
 }
 .sidebar.closed{
@@ -131,7 +131,7 @@
   align-items: center;
   justify-content: center;
   border-radius: 6px;
-  transition: var(--trans-05);
+  transition: background-color 0.5s ease;
 }
 
 .menu li:hover{
@@ -147,6 +147,7 @@
 .bottom-menu li:hover{
   background-color: red;
 }
+
 .menu li a,
 .bottom-menu li a{
   color: #000;
@@ -176,10 +177,10 @@
   justify-content: center;
   min-width: 60px;
   font-size: 1.25rem;
-  transition: var(--trans-03)
+  /* transition: var(--trans-03) */
 }
 .menu li:hover .icon{
-  scale : 1.3;
+  /* scale : 1.3; */
 }
 
 /* CONTENT */
