--- a/src/index.css
+++ b/src/index.css
@@ -65,7 +65,7 @@
   }
   body {
     @apply bg-background text-foreground;
-    background-color: #00A86B;
+    /* background-color: #00A86B; */
   }
 }
 
