--- a/src/index.css
+++ b/src/index.css
@@ -297,3 +297,14 @@
   color: #000;
 
 }
+
+/* Z INDEX ISSUES */
+.toast-over-map {
+
+  z-index: 500;
+}
+
+
+.leaflet-control-attribution {
+  display: none;
+}
