v: Cambio de visualización en tabla de resumen y tooltip de mapa de calor y frio

--- a/src/index.css
+++ b/src/index.css
@@ -413,3 +413,7 @@
 .leaflet-control-attribution {
   display: none;
 }
+
+
+/* MAPA TOOLTIP  */
+/* Aumentar z-index del tooltip sobre el resto de la UI */
